test/bad/type0.pacc
/*
nopacc 1:1 'type error in call to rule Six'
*/

/* This is based on the test case for default expressions. It should fail,
 * because the rule Six has the wrong type. */

Answer <- Digit

Digit <- Four / f:Five -> f / Six

Four <- "four" -> 4
Five <- "five" -> 5
Six :: char * <- "six" -> { "string" }
